fix searchbar on safari

--- a/client/src/css/searchbar.css
+++ b/client/src/css/searchbar.css
@@ -1,5 +1,5 @@
 #auto {
-    position: absolute;
+    /* position: absolute; */
     padding: 10px;
     height: 17px;
     width: 225px;
